--- a/gl-dir/config.json
+++ b/gl-dir/config.json
@@ -28,6 +28,13 @@
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
+    "bright": {
+      "style": "bright.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
     "3d": {
       "style": "3d.json",
       "tilejson": {
