--- a/gl-dir/config.json
+++ b/gl-dir/config.json
@@ -21,15 +21,36 @@
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
-    "toner": {
-      "style": "toner.json",
+    "bright": {
+      "style": "bright.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
-    "bright": {
-      "style": "bright.json",
+    "positron": {
+      "style": "positron.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
+    "fiord": {
+      "style": "fiord.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
+    "dark": {
+      "style": "dark.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
+    "toner": {
+      "style": "toner.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
