--- a/gl/config.json
+++ b/gl/config.json
@@ -13,6 +13,11 @@
       "webp": 90
     }
   },
+  "data": {
+    "or-wa": {
+      "mbtiles": "or-wa.mbtiles"
+    }
+  },
   "styles": {
     "basic": {
       "style": "basic.json",
@@ -56,17 +61,19 @@
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
+    "satellite": {
+      "style": "satellite.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
     "3d": {
       "style": "3d.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
-    }
-  },
-  "data": {
-    "or-wa": {
-      "mbtiles": "or-wa.mbtiles"
     }
   }
 }
