fix(web): both wms and tile background styles working

--- a/gl/config.json
+++ b/gl/config.json
@@ -68,6 +68,13 @@
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
+    "wms": {
+      "style": "wms.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
     "3d": {
       "style": "3d.json",
       "tilejson": {
