--- a/gl/config.json
+++ b/gl/config.json
@@ -37,6 +37,20 @@
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
+    "trimet-routes": {
+      "style": "trimet-routes.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
+    "trimet-satellite-routes": {
+      "style": "trimet-satellite-routes.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
     "basic": {
       "style": "basic.json",
       "tilejson": {
@@ -95,6 +109,13 @@
     },
     "3d": {
       "style": "3d.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
+    "3d-routes": {
+      "style": "3d_routes.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
