--- a/gl/config.json
+++ b/gl/config.json
@@ -115,7 +115,7 @@
       }
     },
     "3d-routes": {
-      "style": "3d_routes.json",
+      "style": "3d-routes.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
