--- a/gl/config.json
+++ b/gl/config.json
@@ -23,6 +23,13 @@
     }
   },
   "styles": {
+    "rtp": {
+      "style": "rtp.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
     "trimet": {
       "style": "trimet.json",
       "tilejson": {
