--- a/gl/config.json
+++ b/gl/config.json
@@ -44,6 +44,13 @@
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
+    "trimet-dark-blue": {
+      "style": "trimet-dark-blue.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
     "trimet-routes": {
       "style": "trimet-routes.json",
       "tilejson": {
