fix: rename mbtiles

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ MAX_ZOOM=16
 DIFF_MODE=false
 
 # The current setup assumes this file is placed inside the data/ dir
-MBTILES_FILE=tiles.mbtiles
+MBTILES_FILE=or-wa.mbtiles
 
 # This is the current repl_config.json location, pre-configured in the tools Dockerfile
 # Makefile and quickstart replace it with the dynamically generated one, but we keep it here in case some other method is used to run.
