--- a/style/config.json
+++ b/style/config.json
@@ -13,7 +13,7 @@
       "webp": 90
     },
     "serveAllFonts": true,
-    "maxScaleFactor": 6,
+    "maxScaleFactor": 4,
     "tileMargin": 12,
     "frontPage": true
   },
@@ -23,15 +23,29 @@
     }
   },
   "styles": {
-    "rtp": {
-      "style": "rtp.json",
+    "trimet": {
+      "style": "trimet.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
-    "trimet": {
-      "style": "trimet.json",
+    "trimet-3d": {
+      "style": "trimet-3d.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
+    "trimet-dark": {
+      "style": "trimet-dark.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
+    "trimet-dark-3d": {
+      "style": "trimet-dark-3d.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
@@ -44,20 +58,6 @@
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
-    "trimet-dark-blue": {
-      "style": "trimet-dark-blue.json",
-      "tilejson": {
-        "type": "overlay",
-        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
-      }
-    },
-    "trimet-routes": {
-      "style": "trimet-routes.json",
-      "tilejson": {
-        "type": "overlay",
-        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
-      }
-    },
     "trimet-satellite-routes": {
       "style": "trimet-satellite-routes.json",
       "tilejson": {
@@ -65,22 +65,30 @@
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
-    "3d": {
-      "style": "3d.json",
+    "rtp": {
+      "style": "rtp.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
-    "3d-routes": {
-      "style": "3d-routes.json",
+    "rtp-satellite": {
+      "style": "rtp-satellite.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
       }
     },
+
     "basic": {
       "style": "basic.json",
+      "tilejson": {
+        "type": "overlay",
+        "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
+      }
+    },
+    "3d": {
+      "style": "3d.json",
       "tilejson": {
         "type": "overlay",
         "bounds": [-123.7999989, 44.6800008, -121.500002, 45.9599992]
