--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # This version must match the MAKE_DC_VERSION value below
-version: "2.8"
+version: "3"
 
 volumes:
   pgdata:
@@ -130,6 +130,7 @@ services:
 
   tileserver-gl:
     image: "maptiler/tileserver-gl:v5.1.3"
+    container_name: "tileserver-gl"
     command:
       - --port
       - "${TPORT:-8080}"
